# easy-set

./: .gitignore  Cargo.toml  README.md  configuration.toml
.cargo/: config.toml
src/: configuration.rs  main.rs
