[package]
name = "easy-set"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = "symbols"
panic = 'abort'
lto = true 
codegen-units = 1
opt-level = "z"

[dependencies]
toml = "0.8.19"
serde =  { version = "1.0.217", features = ["derive"] }
gethostname = "0.5.0"
prettytable-rs = "0.10.0"
winreg = "0.52.0"
ansi_term = "0.12.1"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_System_Environment",
    "Win32_Foundation"
]
